# pytest-frappe

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
pytest_frappe/: __init__.py  fixtures.py  mock_utils.py  plugin.py
